revops-lab/main/default/objects/Quote_Configuration_Line__c/Quote_Configuration_Line__c.object-meta.xml
<CustomObject>
    <description>Priced product line. List price and policy cap are set by the before trigger (ProductPricingService, DiscountPolicyService); totals are formulas so they can roll up natively.</description>
    <label>Quote Configuration Line</label>
    <nameField>
        <displayFormat>QCL-{0000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Configuration Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>