revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rep-entered discount. Capped by the active Discount_Policy__c for the product family.</description>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>