revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/List_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Total__c</fullName>
    <formula>Quantity__c * List_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>