revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price__c</fullName>
    <description>Set from the price book entry by the trigger; user input is overwritten.</description>
    <label>List Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>