revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Max_Allowed_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowed_Discount_Percent__c</fullName>
    <description>Cap from the active discount policy, set by the trigger and enforced by a validation rule.</description>
    <label>Max Allowed Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>