revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>ROUND(Quantity__c * List_Unit_Price__c * (1 - Discount_Percent__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>