revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <formula>ROUND(List_Unit_Price__c * (1 - Discount_Percent__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>