revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_Id__c</fullName>
    <description>Set by ProductPricingService; used for OrderItem creation.</description>
    <label>Price Book Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>