revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Configuration Lines</relationshipLabel>
    <relationshipName>Quote_Configuration_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>