revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Copied from Product2.Family by the trigger for reporting and policy lookup.</description>
    <label>Product Family</label>
    <length>40</length>
    <type>Text</type>
</CustomField>