revops-lab/main/default/objects/Quote_Configuration_Line__c/fields/Quote_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Configuration__c</fullName>
    <label>Quote Configuration</label>
    <referenceTo>Quote_Configuration__c</referenceTo>
    <relationshipLabel>Lines</relationshipLabel>
    <relationshipName>Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>