revops-lab/main/default/objects/Quote_Configuration_Line__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>A line must reference a product. Enforced here because a lookup to Product2 cannot be both required and delete-restricted.</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is required.</errorMessage>
</ValidationRule>