revops-lab/main/default/objects/Quote_Configuration_Line__c/validationRules/Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Quantity must be greater than zero.</description>
    <errorConditionFormula>OR(ISBLANK(Quantity__c), Quantity__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>